force-app/main/default/objects/clariti__LedgerAccount__c/fields/CVRD_DS_Account__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Account__c</fullName>
    <formula>MID(
     clariti__LedgerAccountNumber__c ,
    FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) + 1,
    IF(
        FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) + 1) &gt; 0,
        FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) + 1) - FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) - 1,
        LEN(clariti__LedgerAccountNumber__c ) - FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>