force-app/main/default/objects/clariti__LedgerAccount__c/fields/CVRD_DS_Amount__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Amount__c</fullName>
    <description>Values are coming from Journal Entry Item object from past week</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>