force-app/main/default/objects/clariti__LedgerAccount__c/fields/CVRD_DS_Class__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Class__c</fullName>
    <formula>MID(
     clariti__LedgerAccountNumber__c ,
    FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1,
    FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) - FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class</label>
    <type>Text</type>
</CustomField>