force-app/main/default/objects/clariti__LedgerAccount__c/fields/CVRD_DS_Function__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Function__c</fullName>
    <formula>IF(
    FIND(&quot;-&quot;,  clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) + 1) &gt; 0,
    MID(
        clariti__LedgerAccountNumber__c ,
        FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) + 1) + 1,
        LEN(clariti__LedgerAccountNumber__c ) - FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;, clariti__LedgerAccountNumber__c ) + 1) + 1) + 1)
    ),
    &quot;NULL&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Function</label>
    <type>Text</type>
</CustomField>