force-app/main/default/objects/clariti__LedgerAccount__c/fields/CVRD_DS_Fund__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Fund__c</fullName>
    <formula>LEFT( clariti__LedgerAccountNumber__c , FIND(&quot;-&quot;,  clariti__LedgerAccountNumber__c ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund</label>
    <type>Text</type>
</CustomField>